--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ Software.
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.openreplay.com https://*.stripe.com; frame-src 'none'; object-src 'none'; base-uri 'self';" />
+    content="default-src 'self'; script-src 'self' https://accounts.google.com/gsi/ 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://accounts.google.com/gsi/; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.openreplay.com https://*.stripe.com https://accounts.google.com/; frame-src https://accounts.google.com/; object-src 'none'; base-uri 'self';" />
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta name="csrf-token" content="" />
